--- a/src/app/components/journal/journal.component.html
+++ b/src/app/components/journal/journal.component.html
@@ -24,7 +24,7 @@
     <div class="container-fluid">
         <div class="row offset-3" *ngIf="admin">
             <form action="">
-                {{journal |json}}
+                <!-- {{journal |json}} -->
                 <div class="tim-title">
                     <h3>Article title</h3>
                     <input type="text" placeholder="title" class="form-control" name="titre"
