--- a/src/app/examples/signup/signup.component.html
+++ b/src/app/examples/signup/signup.component.html
@@ -26,7 +26,7 @@
                                     <i class="nc-icon nc-name-85"></i>
                                 </span>
                               </div>
-                                <input required type="text" class="form-control" placeholder="name" (focus)="focus=true" (blur)="focus=false" name="name" [(ngModel)]="profile.name">
+                                <input required type="text" class="form-control" placeholder="name" (focus)="focus=true" (blur)="focus=false" name="name" [(ngModel)]="profile.userName">
                             </div>
                                 <label>Email</label>
                                 <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}"  >
