--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -309,7 +309,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 ml-auto mr-auto text-center">
-                            <h2 class="title">Personal Informations</h2>
+                            <h2 class="title">Personal Information</h2>
                             <!-- <p class="description">The kit comes with three pre-built pages to help you get started faster. You can change the text and images and you're good to go. More importantly, looking at them will give you a picture of what you can built with this powerful kit.</p> -->
                         </div>
                     </div>
